--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -4,7 +4,7 @@
    color: gainsboro;
    font-size: 14px;
    font-family: 'Karla';
-   letter-spacing: 1px;
+   letter-spacing: .5px;
 }
 
 .lp-arrow {
