--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -10,8 +10,8 @@
 
   <title>Meefore | Des rencontres avant d'aller en soirée </title>
   <meta name="description" content="Meefore permet à des groupes d'amis de se retrouver
-  avant d'aller en soirée, en affichant sur une même carte des soirées et des before organisés 
-  pour aller à ces soirées">
+  avant d'aller en soirée, en affichant sur une même carte des soirées et des before 
+  organisés par les gens qui vont à ces soirées.">
 
 
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
