--- a/public/css/media.css
+++ b/public/css/media.css
@@ -22,6 +22,9 @@
 	 	width: 100%;
 	 	padding: 0 20px;
 	 }
+	 #eventsWrap {
+	 	padding: 0px;
+	 }
 	 .row-profile .picture {
 	 	display: inline-block;
 	 	margin: 23px;
@@ -153,6 +156,21 @@
 		
 	#moveAround {
 		width: 10px!important;
+	}
+
+	.event-preview, .party-preview {
+		flex-direction: column;
+		text-align: center;
+	}
+	.preview-date {
+		position: absolute;
+		top: -8px;
+		left: -17px;
+		border: 1px solid #ccc;
+		background: white;
+	}
+	.preview-date div {
+		width: 100%;
 	}
 	
 	 .toast {
