--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -83,7 +83,7 @@ color: white;
    -webkit-transition: all .5s;
    transition: all .5s;
    text-align: center;
-   font-family: Alegreya Sans SC;
+   font-family: Pacifico;
    margin-top: 38px;
 }
 
