--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -16,6 +16,8 @@ color: white;width: 100%;}
 	font-size: 18px;
 	margin-top: 20px;
 	font-family: 'Karla';
+	line-height: 28px;
+	font-family: 'Coming Soon';
 }
 
 .btn-welcome, .btn-fillprofile {
@@ -55,13 +57,30 @@ transition: all ease-in-out .15s;
 }
 
 .lintro-next {
+	text-align: center;
 	position: absolute;
-	top: 50%;
-	transform: translate(0,-50%);
-	right: 0;
+	top: 10px;
+	right: 10px;
+	width: 40px;
+	height: 37px;
+	padding: 0;
+	margin: 0;
 	color: white;
 	z-index: 1000000000;
-	background: rgba(0, 0, 0, 0.5);
+	background: #D4334F;
+	border-radius: 0 0 2px 2px;
+	font-size: 25px;
+	padding-top: 7px;
+	font-family: 'Coming Soon';
+	border-radius: 300px;
+}
+
+.lintro-next-light {
+	border: 1px solid #4B4B4B;
+}
+
+.lintro-next-light:hover {
+	background: rgba(0, 0, 0, 0.35)!important;
 }
 
 .lintro-prev {
@@ -70,10 +89,10 @@ transition: all ease-in-out .15s;
 
 .lintro-next:hover,
 .lintro-prev:hover{
-	background: rgba(0, 0, 0, 0.81);
+	background: #DA4D66;
 }
 .lintro-text {
-	font: 22px 'Pacifico';
+	font: 20px 'Coming Soon';
 	color: white;
 	width: 90%;
 }
