--- a/public/css/search.css
+++ b/public/css/search.css
@@ -34,7 +34,7 @@ align-items: center;
 .event-preview div {
     margin-right: 6px;
 }
-.party-preview {height: 70px;display: flex;align-content: center;justify-content: space-around;float: right;}
+.party-preview {height: 70px;display: flex;align-content: center;justify-content: space-around;float: right;width: 80%;}
 
 .fb-overlay {
    width: 100%;
@@ -61,7 +61,7 @@ align-items: center;
    position: absolute;
    margin-left: 34px;
    top: -1px;
-   width: 258px;
+   width: 358px;
    transition: all ease-out .3s;
    height: 42px;
    z-index: 0;
